<resources>
    <string name="app_name">Atividades Avaliativas</string>
    <string name="pensamento_computacional">PENSAMENTO COMPUTACIONAL</string>
    <string name="quest_o">Questão</string>
    <string name="a_o_rato">a - Resposta 1</string>
    <string name="n">N</string>
    <string name="voc_acertou">Você acertou:</string>
    <string name="_20">20</string>
    <string name="de_40_quest_es">de 40 questões</string>
    <string name="reiniciar">REINICIAR</string>
    <string name="sair">SAIR</string>
    <string name="estrutura_de_dados">ESTRUTURA DE DADOS</string>
    <string name="b_o_pato">b - Resposta 2</string>
    <string name="c_o_gato">c - Resposta 3</string>
    <string name="d_o_rato">d - Resposta 4</string>
    <string name="e_o_cachorro">e - Resposta 5</string>
    <string name="quem_roeu_a_roupa_do_rei_de_roma_nononononononoonononoonononoonononoonononoonononoononononoonononononononono">Quem roeu a roupa do rei de Roma?nononononononoonononoonononoonononoonononoonononoononononoonononononononono</string>
    <string name="desenvolvimento_web">DESENVOLVIMENTO WEB</string>
    <string name="image_daquestao">Image,Daquestao</string>
    <string name="responder">RESPONDER</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="continuar">continuar</string>
    <string name="acertos">Acertos :</string>
    <string name="vazio" />
    <string name="projetos_e_m_todos_para_produ_o">PROJETOS E MÉTODOS PARA PRODUÇÃO</string>
    <string name="fundamentos_da_internet_e_web">FUNDAMENTOS DA INTERNET E WEB</string>
    <string name="escolha_o_curso_desejado">Escolha o Curso desejado</string>
    <string name="introdu_o_e_conceitos_de_computa_o">INTRODUÇÃO E CONCEITOS DE COMPUTAÇÃO</string>
    <string name="sistemas_computacionais">SISTEMAS COMPUTACIONAIS</string>
    <string name="programa_o_orientada_a_objetos">PROGRAMAÇÃO ORIENTADA A OBJETOS</string>
    <string name="projeto_e_an_lise_de_algor_tmos">PROJETO E ANÁLISE DE ALGORÍTMOS</string>
    <string name="desenvolvimento_para_dispositivos_m_veis">DESENVOLVIMENTO PARA DISPOSITIVOS MÓVEIS</string>
    <string name="pocessamento_digital_de_sinais">POCESSAMENTO DIGITAL DE SINAIS</string>
    <string name="compiladores">COMPILADORES</string>
    <string name="gest_o_da_inova_o_e_desenv_de_produtos">GESTÃO DA INOVAÇÃO E DESENVOLVIMENTO DE PRODUTOS</string>
    <string name="forma_o_profissional_em_computa_o">FORMAÇÃO PROFISSIONAL EM COMPUTAÇÃO</string>
    <string name="banco_de_dados">BANCO DE DADOS</string>
    <string name="impactos_da_computa_o_na_sociedade">IMPACTOS DA COMPUTAÇÃO NA SOCIEDADE</string>
    <string name="engenharia_de_software">ENGENHARIA DE SOFTWARE</string>
    <string name="protocolos_de_comunica_o_iot">PROTOCOLOS DE COMUNICAÇÃO IOT</string>
    <string name="sistemas_embarcados">SISTEMAS EMBARCADOS</string>
    <string name="infraestrutura_para_sistemas_de_software">INFRAESTRUTURA PARA SISTEMAS DE SOFTWARE</string>
    <string name="interface_humano_computador">INTERFACE HUMANO COMPUTADOR</string>
    <string name="paginaemconstrucao">paginaemconstrucao</string>
    <string name="imagemfinal">imagemFinal</string>
</resources>