<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DesenvolvimentoParaDispositivosMoveis.DesenvolvimentoParaDispositivosMoveisFim">

    <TextView
        android:id="@+id/voceacertou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/voc_acertou"
        android:textSize="30sp"

        />

    <TextView
        android:id="@+id/acertos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/_20"
        android:textSize="30sp"

        />

    <TextView
        android:id="@+id/total_questoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/de_40_quest_es"
        android:textSize="30sp"

        />

    <ImageView
        android:id="@+id/imagemFinal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/paginaemconstrucao"
        android:src="@drawable/pagina_em_construcao"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_sair"
            style="@android:style/ButtonBar"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"
            android:background="@drawable/btn_bg_design"
            android:text="@string/sair"
            android:visibility="visible" />

        <Button
            android:id="@+id/bt_reiniciar"
            style="@android:style/ButtonBar"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"
            android:background="@drawable/btn_bg_design"
            android:text="@string/reiniciar" />


    </LinearLayout>

</LinearLayout>